# data-contract-survival-guide

./: README.md
.github/workflows/: contract_check.yml
1-demon-of-superficiality-schema-vs-semantics/: README.md  contract_v1_schema_only.yaml  contract_v2_semantic.yaml  pyproject.toml  validate.py
1-demon-of-superficiality-schema-vs-semantics/data/: bad_data_semantic_error.json  good_data.json
2-demon-of-gigantism-tiers-and-models/: README.md  auditor.py  pyproject.toml
2-demon-of-gigantism-tiers-and-models/contracts/bronze/: raw_event_stream.md
2-demon-of-gigantism-tiers-and-models/contracts/gold/: finance_reporting.yaml
2-demon-of-gigantism-tiers-and-models/contracts/silver/: product_analytics.yaml
3-demon-of-staticity-managed-evolution/: README.md  pyproject.toml
3-demon-of-staticity-managed-evolution/contracts/: orders_v1.yaml  orders_v2_minor_change.yaml  orders_v3_breaking_change.yaml
3-demon-of-staticity-managed-evolution/scripts/: breaking_change_detector.py
4-demon-of-the-future-the-diplomat/: .env.example  README.md  diplomat_ai.py  proposed_contract.yaml  pyproject.toml
4-demon-of-the-future-the-diplomat/input/: context.txt  data_sample.json
